# 0rtt

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  agent.sh  o3.sh
.github/workflows/: ci.yaml
crates/api/: Cargo.toml
crates/api/src/: acceptor.rs  lib.rs
crates/fixedbuf/: Cargo.toml
crates/fixedbuf/src/: lib.rs
crates/futures/: Cargo.toml
crates/futures/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/benches/: instrument.rs
crates/metrics/derive/: Cargo.toml
crates/metrics/derive/src/: lib.rs
crates/metrics/src/: derive.rs  global.rs  lib.rs  memory.rs  registry.rs
crates/metrics/tests/: derive.rs
crates/mio/: Cargo.toml
crates/mio/src/: buf.rs  futures.rs  group.rs  lib.rs  udp.rs
crates/o3/: Cargo.toml
crates/o3/src/: agent.rs  buf.rs  cli.rs  connector.rs  errors.rs  io.rs  lib.rs  mapping.rs  metrics.rs  pipe.rs  pipeline.rs  poll.rs  port.rs  redirect.rs  registry.rs  router.rs  rproxy.rs  switch.rs  tcp_quic.rs  token.rs  udp.rs  would_block.rs
crates/o3/src/bin1/: agent.rs
crates/o3/src/port/: mod.rs  port.rs  quic.rs  tcp.rs
crates/poll/: Cargo.toml
crates/poll/benches/: conn_stat.rs  deadline.rs
crates/poll/src/: conn.rs  group.rs  lib.rs  poll.rs  readiness.rs  utils.rs
crates/poll/src/poll/: conn.rs  deadline.rs  errors.rs  events.rs  mod.rs  poll.rs  readiness.rs  timewheel.rs
crates/quic/: Cargo.toml
crates/quic/benches/: group.rs  readiness.rs
crates/quic/src/: acceptor.rs  client.rs  conn.rs  events.rs  futures.rs  group.rs  lib.rs  registration.rs  utils.rs  validation.rs
crates/quic/src/mio/: futures.rs  group.rs  mod.rs  udp.rs  would_block.rs
crates/quic/src/poll/: acceptor.rs  api.rs  client.rs  conn.rs  errors.rs  events.rs  group.rs  mod.rs  server.rs  utils.rs
crates/quic/tests/: async.rs  poll.rs  quic.rs
crates/quico/: Cargo.toml  README.md
crates/quico/benches/: group.rs  readiness.rs
crates/quico/src/: acceptor.rs  client.rs  conn.rs  errors.rs  group.rs  lib.rs  poll.rs  readiness.rs  registration.rs  server.rs  utils.rs  validation.rs  validator.rs
crates/quico/tests/: quic.rs
crates/ringbuff/: Cargo.toml
crates/ringbuff/src/: deflate.rs  lib.rs  pipe.rs  ringbuf.rs
crates/zerio/: Cargo.toml
crates/zerio/benches/: crossbeam.rs  thread_pool_job.rs
crates/zerio/src/: buffer.rs  device.rs  errors.rs  events.rs  lib.rs  stack.rs  token.rs  transport.rs
crates/zerio/src/concurrency/: dispatcher.rs  job.rs  mod.rs  scope.rs  task.rs
crates/zerio/src/executor/: mod.rs  thread_pool.rs  tree.rs
crates/zerio/src/executor/thread_pool/: job.rs  mod.rs  pool.rs
crates/zerio/src/net/: mod.rs
crates/zerio/src/net/quic/: group.rs  mod.rs  udp.rs  would_block.rs
crates/zerortt/: Cargo.toml
crates/zerortt/src/: lib.rs
crates/zerortt/tests/: async.rs  poll.rs
scripts/: agent.sh  o3.sh  publish.sh
