[package]
description = "A lightweight metrics facade for `Rust`."
documentation = "https://docs.rs/metricrs"
edition = "2024"
license = "MIT"
name = "metricrs"
repository = "https://github.com/ZeroRtt/ZeroRtt/crates/metrics"
version = "0.1.0"


[dependencies]
metricrs-derive = { version = "^0.1", path = "./derive" , optional = true }

[dev-dependencies]
futures = { version="0.3.31" }
futures-test = { version="0.3.31" }

[features]
default = ["derive"]
global = []
derive = ["metricrs-derive","global"]
