[package]
description = "A `quic/http3` reverse proxy created by `quico`."
documentation = "https://docs.rs/o3"
edition = "2024"
license = "MIT"
name = "o3"
repository = "https://github.com/ZeroRtt/ZeroRtt/crates/ringbuff"
version = "0.1.0"

[dependencies]
mio = { version = "^1", features = ["net", "os-poll"] }
clap = { version = "=4.5.41", features = ["derive"], optional = true }
quico = { version = "^0.1", path = "../quico" }
ringbuff = { version = "^0.1", path = "../ringbuff" }
log = { version = "^0.4" }
thiserror = "2.0.12"
rand = { version = "0.9.2", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
color-print = { version = "0.3.7", optional = true }

[features]
default = ["rproxy", "agent", "cli"]
rproxy = []
agent = ["rand"]
cli = ["clap", "pretty_env_logger", "color-print"]

[[bin]]
name = "o3-agent"
path = "src/bin/agent.rs"
required-features = ["agent", "cli"]
