[package]
description = "Core `poll` API implementation for zerortt `QUIC`."
documentation = "https://docs.rs/zerortt"
edition = "2024"
license = "MIT"
name = "zerortt-poll"
repository = "https://github.com/ZeroRtt/0rtt/crates/poll"
version.workspace = true
readme = "../../README.md"

[dependencies]
priority-queue = "2.5.0"
parking_lot = "0.12.4"
zerortt-api = { version = "^0.1" , path="../api", default-features = false }
log = { version = "^0.4" }
crossbeam-utils = { version="0.8.21", optional=true }

[features]
default = ["client","server"]
server = ["crossbeam-utils","zerortt-api/server"]
client = ["zerortt-api/client"]
