[package]
description = "A low-level quic library based on `quiche` focusing on non-blocking and masive connection management."
documentation = "https://docs.rs/zerortt"
edition = "2024"
license = "MIT"
name = "zerortt"
repository = "https://github.com/ZeroRtt/zerortt/crates/quic"
version = "0.1.7"
readme = "../../README.md"

[dependencies]
quiche = { version = "^0.24", default-features = false, features = [
    "boringssl-boring-crate",
] }
log = { version = "^0.4" }
thiserror = "^2.0"
priority-queue = "2.5.0"
parking_lot = "0.12.4"
boring = { version = "^4.17" }
rand = { version = "0.9.2", optional = true }
fixedbuf = { version = "0.1.0" , path="../fixedbuf" }
mio = {version = "1.0.4", features=["os-poll","net"], optional = true }
crossbeam-utils = { version="0.8.21", optional=true }
futures-io = { version="0.3.31", optional=true }
futures-util = { version="0.3.31", optional=true }
tokio = { version="1.47.1", optional=true }

[dev-dependencies]
divan = "0.1.21"
rand = "0.9.2"
pretty_env_logger = "0.5.0"
test-fuzz = "7.2.4"
tokio = { version="1.47.1", features=["rt","macros", "rt-multi-thread","io-util"] }
futures-util = { version="0.3.31", features=["io"] }

[features]
default = ["client","server","mio","futures","tokio"]
client = ["rand"]
server = ["rand"]
mio = ["dep:mio","crossbeam-utils"]
futures = ["mio","futures-io","futures-util"]
tokio = ["dep:tokio"]

[[bench]]
name = "group"
harness = false
