[package]
description = "quico: A poll system with `quiche` for massive quiche connections."
documentation = "https://docs.rs/quico"
edition = "2024"
license = "MIT"
name = "quico"
repository = "https://github.com/ZeroRtt/ZeroRtt/quico"
version = "0.1.1"

[dependencies]
quiche = { version = "^0.24" }
log = { version = "^0.4" }
thiserror = "2.0.12"
priority-queue = "2.5.0"
parking_lot = "0.12.4"
boring = { version = "^4.17" }

[dev-dependencies]
divan = "0.1.21"
rand = "0.9.2"

[features]
default = ["server", "client"]
server = []
client = []
