[package]
description = "A ringbuff bridge between `std::io` and `futures::io`."
documentation = "https://docs.rs/ringbuff"
edition = "2024"
license = "MIT"
name = "ringbuff"
repository = "https://github.com/quic-lab/n3/crates/ringbuff"
version = "0.1.5"

[dependencies]
futures = { version = "^0.3" }
flate2 = { version = "1.1.2", optional = true }

[dev-dependencies]
futures-test = "^0.3"
pretty_env_logger = "0.5.0"

[features]
default = ["deflate"]
deflate = ["dep:flate2"]
