[package]
description = "Asynchronous runtimes for `ZeroRtt`"
documentation = "https://docs.rs/zerio"
edition = "2024"
license = "MIT"
name = "zerio"
repository = "https://github.com/ZeroRtt/ZeroRtt/zerio"
version = "0.1.0"

[dependencies]
log = { version = "^0.4" }
thiserror = "^2.0"
zrquic = { version = "^0.1", path="../quic"}
parking_lot = "0.12.4"
mio = { version = "^1", features = ["net", "os-poll"] }
fixedbuf = { version = "^0.1", path = "../fixedbuf" }

[dev-dependencies]
