[package]
description = "A low-level quic library based on `quiche` focusing on non-blocking and masive connection management."
documentation = "https://docs.rs/zerortt"
edition = "2024"
license = "MIT"
name = "zerortt"
repository = "https://github.com/ZeroRtt/0rtt/crates/zerortt"
version.workspace = true
readme = "../../README.md"

[dependencies]
zerortt-api = { version = "^0.1" , path="../api"}
zerortt-poll = { version = "^0.1" , path="../poll" }
zerortt-futures = { version = "^0.1" , path="../futures", default-features = false, optional = true }
zerortt-mio = { version = "^0.1" , path="../mio", default-features = false, optional = true }


[dev-dependencies]
divan = "0.1.21"
rand = "0.9.2"
pretty_env_logger = "0.5.0"
tokio = { version="1.47.1", features=["rt","macros", "rt-multi-thread","io-util"] }
futures-util = { version="0.3.31", features=["io"] }
fixedbuf = { version = "^0.1" , path="../fixedbuf" }
log = { version = "^0.4" }

[features]
default = ["mio","mio-futures","futures"]
mio = ["zerortt-mio"]
mio-futures = ["zerortt-mio/futures"]
futures = ["zerortt-futures"]
